Implemented email contact to serve support page
